# sqlshield

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  hooks.sh  release-plz.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  lsp-release.yml  release-plz.yml  rust.yml  vscode.yml
editors/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: sqlshield.rs
sqlshield/: CHANGELOG.md  Cargo.toml  README.md
sqlshield-cli/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
sqlshield-cli/src/: config.rs  main.rs
sqlshield-cli/tests/: acceptance_test.rs  cli.rs  schema.sql
sqlshield-cli/tests/languages/: main.js  main.py  main.rs
sqlshield-gui/: Cargo.toml
sqlshield-gui/src/: main.rs
sqlshield-gui/ui/: appwindow.slint
sqlshield-introspect/: CHANGELOG.md  Cargo.toml
sqlshield-introspect/src/: lib.rs
sqlshield-lsp/: CHANGELOG.md  Cargo.toml  README.md
sqlshield-lsp/src/: config.rs  main.rs  server.rs
sqlshield-py/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  test.py
sqlshield-py/sqlshield/: __init__.py  sqlshield.pyi
sqlshield-py/src/: lib.rs
sqlshield-py/tests/: acceptance_test.py
sqlshield/src/: dialect.rs  error.rs  lib.rs
sqlshield/src/finder/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs
sqlshield/src/schema/: mod.rs  sql.rs
sqlshield/src/validation/: asserts.rs  mod.rs
sqlshield/src/validation/clauses/: delete.rs  insert.rs  merge.rs  mod.rs  select.rs  table_ref.rs  update.rs
sqlshield/tests/: aliased_columns.rs  case_insensitive.rs  cte_to_cte.rs  derived_tables.rs  dialect.rs  dml.rs  finder.rs  go_string_extraction.rs  javascript_string_extraction.rs  join_constraint.rs  merge.rs  nested_join.rs  nested_scope.rs  order_by.rs  postgres_folding.rs  projection_expressions.rs  projection_qualifier.rs  python_interpolation.rs  rust_string_extraction.rs  schema.rs  schema_alter.rs  schema_prefixed.rs  schema_views.rs  set_operations.rs  validate_query.rs  walk_filter.rs  where_having_group.rs  wildcard_expansion.rs  with_dml.rs
src/: lib.rs  main.rs
src/finder/: mod.rs  python.rs
src/validation/: asserts.rs
src/validation/clauses/: select.rs
tests/: acceptance_test.rs  main.py  schema.sql
