[workspace]
resolver = "2"
members = [
  "sqlshield",
  "sqlshield-cli",
  "sqlshield-lsp",
  "sqlshield-py",
]

[workspace.package]
version = "0.0.1"
authors = ["David Freire <work@davidfrei.re>"]
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/davidsmfreire/sqlshield"

[workspace.dependencies]
sqlshield = { version = "0.0.1", path = "sqlshield"}
