[package]
name = "sqlshield-cli"
version = "0.0.1"
edition = "2021"
authors = ["David Freire"]
description = "Validate raw sql queries inside code files against a schema"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sqlshield"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
sqlshield = { workspace = true }
