[package]
name = "sqlshield-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Validate raw sql queries inside code files against a schema"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sqlshield"
path = "src/main.rs"

[[test]]
name = "acceptance_test"
path = "tests/acceptance_test.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
sqlshield = { workspace = true }
