[package]
name = "sqlshield-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Validate raw sql queries inside code files against a schema"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sqlshield"
path = "src/main.rs"

[[test]]
name = "acceptance_test"
path = "tests/acceptance_test.rs"

[[test]]
name = "cli"
path = "tests/cli.rs"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[features]
default = ["introspect"]
introspect = ["dep:sqlshield-introspect"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlshield = { workspace = true }
sqlshield-introspect = { workspace = true, optional = true }
toml = "0.8"
