[package]
name = "sqlshield-gui"
version = "0.1.0"
authors = ["David Freire <davidsmfreire@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
sqlshield = { workspace = true }

[build-dependencies]
slint-build = "1.4"
