[package]
name = "sqlshield-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for sqlshield with cli included"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sqlshield"
crate-type = ["cdylib"]

# [[bin]]
# name = "sqlshield"
# path = "../sqlshield-cli/src/main.rs"


[dependencies]
pyo3 = "0.28"
sqlshield = { workspace = true }
