[package]
name = "sqlshield-py"
# Tracked independently of the rest of the workspace because PyPI
# rejects re-uploads of the same version, so metadata-only fixes
# need a fresh number even when no Rust code changed.
version = "0.0.3"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for sqlshield with cli included"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sqlshield"
crate-type = ["cdylib"]

# [[bin]]
# name = "sqlshield"
# path = "../sqlshield-cli/src/main.rs"


[dependencies]
pyo3 = "0.28"
sqlshield = { workspace = true }
