[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sqlshield-py"
description = "Schema-aware SQL linter for raw SQL embedded in Python (and other) source code — no database required."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "David Freire", email = "dev@davidfrei.re" }]
requires-python = ">=3.8"
keywords = ["sql", "linter", "static-analysis", "schema", "postgres", "mysql", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/davidsmfreire/sqlshield"
Repository = "https://github.com/davidsmfreire/sqlshield"
Issues = "https://github.com/davidsmfreire/sqlshield/issues"
Changelog = "https://github.com/davidsmfreire/sqlshield/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
